# msm

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
demo_output/: container_logs.yaml  server_config.yaml  server_data.yaml  server_registry.yaml  server_status.yaml
docs/: demand.md
examples/: README_registry_crud.md  demo_container_manager_cli.py  demo_registry_crud.py  demo_yaml.py
examples/demo_output/: container_info.yaml  demo_server_registry.yaml  resource_usage.yaml  server_config.yaml  server_registry.yaml  server_status.yaml
src/msm/core/: __init__.py  container_manager.py  mcp_manager.py  status_monitor.py
src/msm/data/: models.py
src/msm/entrypoint/cli/: backend.py  completer.py  repl.py
src/msm/entrypoint/cli/commands/: __init__.py  base.py  core.py  graph.py  mcp.py  model.py  registry.py  tools.py
tests/: test_models.py
tests/core/: test_container_manager.py  test_mcp_manager.py  test_status_monitor.py
tests/model/: test_containerinfo.py  test_containerlogs.py  test_mcpserverconfig.py  test_mcpserverdata.py  test_mcpserverstatus.py  test_resourceusage.py  test_serverregistry.py  test_serverstatus.py
